MobileNav box-sizing fix + landing page count spacing

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1523,7 +1523,6 @@ hr {
   font-size: 11px;
   font-weight: 700;
   color: #22c55e;
-  margin-left: 6px;
 }
 
 .lp-explore-desc {
